feat: deleteCartItemByProductIdAndUserId endpoint
